branches/wip/Archive/dd6cbef9e5e44566a387c6b931f39536-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In member function ‘B::operator A()’:
main.cpp:7:18: error: return type ‘class A’ is incomplete
     operator A() {return A();}
                  ^
main.cpp:7:28: error: invalid use of incomplete type ‘class A’
     operator A() {return A();}
                            ^
main.cpp:3:7: error: forward declaration of ‘class A’
 class A;
       ^
